add server side, nginx (handle env vars), mongodb image and more...
